# androidToJS_wavToMp3

./: build.gradle  import-summary.txt  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
lib-lame/: CMakeLists.txt  build.gradle
lib-lame/libs/include/: cn_qtone_yzt_util_LameUtil.h  jni.h  lamemp3.c  util.h  wrapper.c
lib-lame/src/main/: AndroidManifest.xml
lib-lame/src/main/cpp/: lamemp3.cpp
lib-lame/src/main/java/com/torment/lame/: LameUtils.java
lib-lame/src/main/res/layout/: activity_main.xml
percentlayoutlib/: build.gradle
percentlayoutlib/src/main/: AndroidManifest.xml
percentlayoutlib/src/main/res/values/: attrs.xml  strings.xml
wisdomclassroom/: build.gradle  proguard-rules.pro
wisdomclassroom/src/main/: AndroidManifest.xml
wisdomclassroom/src/main/assets/: WebViewJavascriptBridge.js.txt
wisdomclassroom/src/main/res/anim/: button_come.xml  button_out.xml  dialog_enter_anim.xml  dialog_exit_anim.xml  down_in.xml  down_out.xml  linerlayout_in.xml  linerlayout_out.xml  loading_animation.xml  recommon_menu_in.xml  recommon_menu_out.xml  test.xml  zoom_in.xml  zoom_out.xml  zoomin.xml  zoomout.xml
wisdomclassroom/src/main/res/color/: color_item_select_color.xml  text_select_color.xml
wisdomclassroom/src/main/res/drawable/: back_finsh.xml  border_orange.xml  border_white.xml  dialog_bg.xml  dialog_progress_bg.xml  drawable_tese.xml  home_manager_homework.xml  homework_assign.xml  homework_manage.xml  imagebg_alpha_type_4.xml  shape_ip_bg.xml  (+37 more)
xutilslibs/: build.gradle  proguard-rules.pro
xutilslibs/src/main/: AndroidManifest.xml
(+187 files in other folders)
